--- a/index.html
+++ b/index.html
@@ -4,32 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Global Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Arial', sans-serif;
+        }
+
+        /* Background Image */
+        body {
+            background: url('https://www.dropbox.com/scl/fi/6qv0zq8xj2l4fbfkq1bme/black-and-white-bad-weather-landscapes.jpg?rlkey=2iwmqubstwxz3yr7kgw5dp9vd&raw=1') 
+                        no-repeat center center/cover;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: white;
+            flex-direction: column;
+        }
+
+        /* Time Display */
+        #timeDisplay {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        /* Dark Overlay for Readability */
+        .container {
+            background: rgba(0, 0, 0, 0.6);
+            padding: 30px;
+            border-radius: 12px;
+            width: 90%;
+            max-width: 500px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Title Styling */
+        h1 {
+            font-size: 28px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
+
+        /* Button Container */
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        /* Button Styling */
+        .button {
+            text-decoration: none;
+            background: #ffcc00;
+            color: black;
+            padding: 12px 20px;
+            border-radius: 5px;
+            font-weight: bold;
+            font-size: 18px;
+            transition: background 0.3s ease-in-out, transform 0.2s;
+        }
+
+        .button:hover {
+            background: #ff9900;
+            transform: scale(1.05);
+        }
+    </style>
 </head>
-<body> YUH IS THE BEST!!
+<body>
+    <div id="timeDisplay">Loading CST Time...</div>
+
     <div class="container">
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to Yuh</h1>
         <div class="button-container">
             <a href="https://www.roblox.com/users/3401799906/profile?friendshipSourceType=PlayerSearch" class="button">Roblox</a>
-            <a href="https://www.tiktok.com/@crushedhigh_1?_t=ZT-8u2E3raQsqk&_r=1" class="button">tiktok</a>
-            <a href="https://discord.gg/C7KWsgXn" class="button">discord</a>
-        
+            <a href="https://www.tiktok.com/@crushedhigh_1?_t=ZT-8u2E3raQsqk&_r=1" class="button">TikTok</a>
+            <a href="https://discord.gg/C7KWsgXn" class="button">Discord</a>
         </div>
     </div>
+
+    <script>
+        function updateTime() {
+            let now = new Date();
+            let options = { timeZone: 'America/Chicago', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
+            let timeString = new Intl.DateTimeFormat('en-US', options).format(now);
+            document.getElementById('timeDisplay').innerText = "Current CST Time: " + timeString;
+        }
+
+        setInterval(updateTime, 1000);
+        updateTime();
+    </script>
 </body>
 </html>
-
-<!-- Time Display -->
-<div id="timeDisplay"></div>
-
-<script>
-    function updateTime() {
-        let now = new Date();
-        let options = { timeZone: 'America/Chicago', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true };
-        let timeString = new Intl.DateTimeFormat('en-US', options).format(now);
-        document.getElementById('timeDisplay').innerText = "Current CST Time: " + timeString;
-    }
-
-    setInterval(updateTime, 1000);
-    updateTime();
-</script>
+YUH IS THE BEST
